--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "efectotec-generator",
+  "name": "efectoTEC-Generator",
   "version": "1.0.0",
-  "description": "Schulaufgaben Generator G9",
+  "description": "Schulaufgaben Generator",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.1.3",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.21.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "multer": "^1.4.5-lts.1"
   },
   "engines": {
