--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "efectotec-generator",
-  "version": "1.0.0",
-  "description": "Schulaufgaben Generator für bayerische Gymnasien",
+  "version": "1.1.0",
+  "description": "Schulaufgaben Generator für bayerische Gymnasien (G9)",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.1.5",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
